--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weatherbaby",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A simple CLI tool to fetch and display current weather information.",
   "main": "weather-cli.js",
   "bin": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-username/your-repo-name.git"
+    "url": "git+https://github.com/ritfiz/weather-cli.git"
   },
   "keywords": [
     "weather",
@@ -33,7 +33,7 @@
   },
   "preferGlobal": true,
   "bugs": {
-    "url": "https://github.com/your-username/your-repo-name/issues"
+    "url": "https://github.com/ritfiz/weather-cli/issues"
   },
-  "homepage": "https://github.com/your-username/your-repo-name#readme"
+  "homepage": "https://github.com/ritfiz/weather-cli"
 }
